--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,10 @@ dependencies {
 
     //Lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+
+    //Room
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
