--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
     def moshi_version = "1.12.0"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
+
+    //Splash Screen
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
 }
