--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,9 @@ dependencies {
 
     //Splash Screen
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
+
+    //Navigation
+    def nav_version = "2.3.5"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
